--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,93 @@
 src/secp256k1
 src/friendshipcoind
+
+*.tar.gz
+
+*.exe
+src/*.exe
+src/*/*.exe
+
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.log
+config.status
+configure
+src/.deps/
+src/Makefile.in
+src/friendshipcoin-config.h
+src/friendshipcoin-config.h.in
+src/build-aux/
+src/qt/Makefile.in
+src/stamp-h1
+share/setup.nsi
+share/qt/Info.plist
+
+src/leveldb/.deps/
+
+src/test/.deps
+src/test/.dirstamp
+
+src/qt/.deps/
+src/qt/.dirstamp
+src/qt/*.moc
+src/qt/moc_*.cpp
+src/qt/forms/ui_*.h
+
+src/qt/test/.deps/
+src/qt/test/.dirstamp
+src/qt/test/moc*.cpp
+src/qt/res/.deps/
+src/qt/res/.dirstamp
+
+.*.swp
+*.*~*
+*.bak
+*.rej
+*.orig
+*.o
+*.patch
+.friendshipcoin
+*.a
+*.pb.cc
+*.pb.h
+
+*.log
+*.trs
+*.dmg
+
+# Compilation and Qt preprocessor part
+*.qm
+Makefile
+friendshipcoin-qt
+Friendshipcoin-Qt.app
+
+# Unit-tests
+Makefile.test
+friendshipcoin-qt_test
+
+# Resources cpp
+qrc_*.cpp
+
+# Qt creator
+*.pro.user
+
+# Mac specific
+.DS_Store
+build
+
+#lcov
+*.gcno
+/*.info
+test_friendshipcoin.coverage/
+total.coverage/
+coverage_percent.txt
+
+#build tests
+linux-coverage-build
+linux-build
+win32-build
+qa/pull-tester/run-friendshipcoind-for-test.sh
+qa/pull-tester/build-tests.sh
+
+!src/leveldb-*/Makefile
