--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,23 +1,44 @@
-AM_CPPFLAGS =  $(INCLUDES) -I$(top_builddir)/src/obj \
-  -I$(top_srcdir)/src/leveldb/include -I$(top_srcdir)/src/leveldb/helpers \
-  $(BOOST_INCLUDES)
-AM_LDFLAGS = $(PTHREAD_CFLAGS)
+DIST_SUBDIRS = secp256k1 leveldb
+
+AM_LDFLAGS = $(PTHREAD_CFLAGS) $(LIBTOOL_LDFLAGS) $(HARDENED_LDFLAGS)
+AM_CXXFLAGS = $(HARDENED_CXXFLAGS)
+AM_CPPFLAGS = $(HARDENED_CPPFLAGS)
+if EMBEDDED_LEVELDB
+AM_CPPFLAGS += -I$(top_srcdir)/src/leveldb/include
+AM_CPPFLAGS += -I$(top_srcdir)/src/leveldb/helpers
+endif
+EXTRA_LIBRARIES =
+
+
+FRIENDSHIPCOIN_CONFIG_INCLUDES=-I$(builddir)/config
+FRIENDSHIPCOIN_INCLUDES=-I$(builddir) -I$(builddir)/obj $(BOOST_CPPFLAGS) $(LEVELDB_CPPFLAGS) $(CRYPTO_CFLAGS) $(SSL_CFLAGS)
+FRIENDSHIPCOIN_INCLUDES += -I$(srcdir)/secp256k1/include
+
+LIBFRIENDSHIPCOIN=libfriendshipcoin.a
+LIBSECP256K1=secp256k1/libsecp256k1.la
+LEVELDB_CPPFLAGS += -I$(srcdir)/leveldb/include
+LEVELDB_CPPFLAGS += -I$(srcdir)/leveldb/helpers
+LIBLEVELDB += $(builddir)/leveldb/libleveldb.a
+LIBMEMENV  += $(builddir)/leveldb/libmemenv.a
 
 secp256k1/libsecp256k1.la: $(wildcard secp256k1/src/*) $(wildcard secp256k1/include/*)
-	@$(MAKE) $(AM_MAKEFLAGS) -C $(@D) $(@F)
+	$(AM_V_at)$(MAKE) $(AM_MAKEFLAGS) -C $(@D) $(@F)
 
-noinst_LIBRARIES = libfriendshipcoin.a
+# NOTE: This dependency is not strictly necessary, but without it make may try to build both in parallel, which breaks the LevelDB build system in a race
+$(LIBLEVELDB): $(LIBMEMENV)
+
+$(LIBLEVELDB) $(LIBMEMENV):
+	@echo "Building LevelDB ..."; cd leveldb; chmod 755 *; $(MAKE) $(@F); cd ..
+obj/txdb-leveldb.o: leveldb/libleveldb.a
+
+EXTRA_LIBRARIES += libfriendshipcoin.a
+
+if ENABLE_WALLET
+FRIENDSHIPCOIN_INCLUDES += $(BDB_CPPFLAGS)
+endif
 
 bin_PROGRAMS = friendshipcoind
 
-AM_CPPFLAGS += -I$(top_srcdir)/src/secp256k1/include
-AM_CPPFLAGS += -std=c++11
-
-LIBPATHS= \
- -L"$(CURDIR)/secp256k1/src/.libs"
-
-SUBDIRS = .
-DIST_SUBDIRS = .
 .PHONY: FORCE
 # friendshipcoin core #
 FRIENDSHIPCOIN_CORE_H = activemasternode.h addrman.h alert.h allocators.h \
@@ -25,10 +46,10 @@ FRIENDSHIPCOIN_CORE_H = activemasternode.h addrman.h alert.h allocators.h \
 	clientversion.h coincontrol.h compat.h core.h crypter.h darksend-relay.h \
 	darksend.h db.h ecwrapper.h hash.h hashblock.h init.h instantx.h kernel.h \
   key.h keystore.h limitedmap.h main.h miner.h mruset.h neoscrypt.h \
-  net.h netbase.h pbkdf2.h pos.h protocol.h pubkey.h rpcclient.h rpcprotocol.h \
-	rpcserver.h script.h scrypt.h serialize.h smessage.h spork.h stealth.h \
-	strlcpy.h sync.h threadsafety.h tinyformat.h txdb-leveldb.h txdb.h \
-  txmempool.h ui_interface.h uint256.h util.h utilstrencodings.h \
+  net.h netbase.h noui.h pbkdf2.h pos.h protocol.h pubkey.h rpcdarksend.h \
+	rpcclient.h rpcprotocol.h rpcserver.h script.h scrypt.h serialize.h \
+	smessage.h spork.h stealth.h strlcpy.h sync.h threadsafety.h tinyformat.h \
+	txdb-leveldb.h txdb.h txmempool.h ui_interface.h uint256.h util.h \
 	version.h walletdb.h wallet.h
 
 JSON_H = json/json_spirit.h json/json_spirit_error_position.h \
@@ -37,43 +58,54 @@ JSON_H = json/json_spirit.h json/json_spirit_error_position.h \
   json/json_spirit_value.h json/json_spirit_writer.h \
   json/json_spirit_writer_template.h
 
+CRYPTO_H = crypto/common.h crypto/hmac_sha256.h crypto/hmac_sha512.h \
+	crypto/ripemd160.h crypto/sha1.h crypto/sha256.h crypto/sha512.h
+
+SUPPORT_H = support/cleanse.h
+
 obj/build.h: FORCE
-	@$(MKDIR_P) $(abs_top_builddir)/src/obj
+	@$(MKDIR_P) $(builddir)/obj
 	@$(top_srcdir)/share/genbuild.sh $(abs_top_builddir)/src/obj/build.h \
 	  $(abs_top_srcdir)
-version.o: obj/build.h
+libfriendshipcoin_a-clientversion.$(OBJEXT): obj/build.h
+
+libfriendshipcoin_a_CPPFLAGS = $(AM_CPPFLAGS) $(FRIENDSHIPCOIN_INCLUDES) \
+															 $(MINIUPNPC_CPPFLAGS) $(EVENT_CFLAGS) \
+															 $(EVENT_PTHREADS_CFLAGS)
+libfriendshipcoin_a_CXXFLAGS = $(AM_CXXFLAGS)
 
 libfriendshipcoin_a_SOURCES = activemasternode.cpp addrman.cpp alert.cpp \
-	allocators.cpp base58.cpp chainparams.cpp checkpoints.cpp \
-	core.cpp crypter.cpp darksend-relay.cpp darksend.cpp db.cpp ecwrapper.cpp \
-	hash.cpp init.cpp instantx.cpp kernel.cpp key.cpp keystore.cpp main.cpp \
-	masternode-payments.cpp masternode.cpp masternodeconfig.cpp \
-	masternodeman.cpp miner.cpp neoscrypt.c net.cpp netbase.cpp noui.cpp \
-	pbkdf2.cpp pos.cpp protocol.cpp pubkey.cpp rpcblockchain.cpp rpcclient.cpp \
-	rpcdump.cpp rpcmining.cpp rpcmisc.cpp rpcnet.cpp rpcprotocol.cpp \
-	rpcrawtransaction.cpp rpcserver.cpp rpcsmessage.cpp rpcwallet.cpp \
-	script.cpp scrypt.cpp smessage.cpp spork.cpp stealth.cpp sync.cpp \
-	txdb-leveldb.cpp txmempool.cpp util.cpp utilstrencodings.cpp \
-	version.cpp wallet.cpp walletdb.cpp $(JSON_H) \
-  $(FRIENDSHIPCOIN_CORE_H)
+  allocators.cpp base58.cpp chainparams.cpp checkpoints.cpp \
+  core.cpp crypter.cpp crypto/hmac_sha256.cpp crypto/hmac_sha512.cpp \
+  crypto/ripemd160.cpp crypto/sha1.cpp crypto/sha256.cpp crypto/sha512.cpp \
+  db.cpp ecwrapper.cpp hash.cpp init.cpp \
+	instantx.cpp kernel.cpp key.cpp keystore.cpp main.cpp \
+  masternode.cpp masternodeconfig.cpp masternodeman.cpp  \
+	masternode-payments.cpp miner.cpp neoscrypt.c net.cpp netbase.cpp noui.cpp \
+  pbkdf2.cpp pos.cpp protocol.cpp pubkey.cpp rpcblockchain.cpp rpcclient.cpp \
+	rpcdarksend.cpp rpcdump.cpp rpcmining.cpp rpcmisc.cpp rpcnet.cpp \
+	rpcprotocol.cpp rpcrawtransaction.cpp rpcserver.cpp rpcsmessage.cpp \
+	rpcwallet.cpp script.cpp scrypt.cpp smessage.cpp spork.cpp stealth.cpp \
+  support/cleanse.cpp sync.cpp txdb-leveldb.cpp txmempool.cpp util.cpp \
+	darksend.cpp darksend-relay.cpp version.cpp wallet.cpp walletdb.cpp \
+	$(JSON_H) ($CRYPTO_H) $(FRIENDSHIPCOIN_CORE_H) $(SUPPORT_H)
 
-nodist_libfriendshipcoin_a_CPPFLAGS = $(FRIENDSHIPCOIN_INCLUDES)
-nodist_libfriendshipcoin_a_SOURCES = $(top_srcdir)/src/obj/build.h
-#
+
+nodist_libfriendshipcoin_a_SOURCES = $(srcdir)/obj/build.h
+
 
 # friendshipcoind binary #
-friendshipcoind_LDADD = libfriendshipcoin.a leveldb/libleveldb.a leveldb/libmemenv.a \
-  $(BOOST_LIBS) $(LIBPATHS)
 friendshipcoind_SOURCES = bitcoind.cpp
-#
+friendshipcoind_CPPFLAGS = $(AM_CPPFLAGS) $(FRIENDSHIPCOIN_INCLUDES) \
+													 $(MINIUPNPC_CPPFLAGS) $(EVENT_CFLAGS) \
+													 $(EVENT_PTHREADS_CFLAGS)
+friendshipcoind_CXXFLAGS = $(AM_CXXFLAGS)
+friendshipcoind_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 
-leveldb/libleveldb.a:
-	@echo "Building LevelDB ..." && cd leveldb && CXX="$(CXX)" CC="$(CC)" \
-	  PLATFORM=$(TARGET_OS) AR="$(AR)" $(MAKE) $(LEVELDB_TARGET_FLAGS) OPT="$(CXXFLAGS) $(CPPFLAGS)" libleveldb.a
-
-leveldb/libmemenv.a:
-	@echo "Building LevelDB ..." && cd leveldb && CXX="$(CXX)" CC="$(CC)" \
-	  PLATFORM=$(TARGET_OS) AR="$(AR)" $(MAKE) $(LEVELDB_TARGET_FLAGS) OPT="$(CXXFLAGS) $(CPPFLAGS)" libmemenv.a
+friendshipcoind_LDADD = $(LIBFRIENDSHIPCOIN) $(LIBLEVELDB) $(LIBMEMENV) \
+												$(LIBSECP256K1)
+friendshipcoind_LDADD += $(BOOST_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) \
+												 $(MINIUPNPC_LIBS) $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS)
 
 CLEANFILES = leveldb/libleveldb.a leveldb/libmemenv.a *.gcda *.gcno
 
