--- a/src/config/friendshipcoin-config.h.in
+++ b/src/config/friendshipcoin-config.h.in
@@ -1,8 +1,8 @@
 /* src/config/friendshipcoin-config.h.in.  Generated from configure.ac by autoheader.  */
 
-#ifndef BITCOIN_CONFIG_H
+#ifndef FRIENDSHIPCOIN_CONFIG_H
 
-#define BITCOIN_CONFIG_H
+#define FRIENDSHIPCOIN_CONFIG_H
 
 /* Define if building universal (internal helper macro) */
 #undef AC_APPLE_UNIVERSAL_BUILD
@@ -28,6 +28,9 @@
 /* Define to 1 to enable wallet functions */
 #undef ENABLE_WALLET
 
+/* Define to 1 to enable ZMQ functions */
+#undef ENABLE_ZMQ
+
 /* parameter and return value type for __fdelt_chk */
 #undef FDELT_TYPE
 
@@ -52,6 +55,16 @@
 /* define if the Boost::Unit_Test_Framework library is available */
 #undef HAVE_BOOST_UNIT_TEST_FRAMEWORK
 
+/* Define to 1 if you have the <byteswap.h> header file. */
+#undef HAVE_BYTESWAP_H
+
+/* define if the compiler supports basic C++11 syntax */
+#undef HAVE_CXX11
+
+/* Define to 1 if you have the declaration of `be16toh', and to 0 if you
+   don't. */
+#undef HAVE_DECL_BE16TOH
+
 /* Define to 1 if you have the declaration of `be32toh', and to 0 if you
    don't. */
 #undef HAVE_DECL_BE32TOH
@@ -59,6 +72,22 @@
 /* Define to 1 if you have the declaration of `be64toh', and to 0 if you
    don't. */
 #undef HAVE_DECL_BE64TOH
+
+/* Define to 1 if you have the declaration of `bswap_16', and to 0 if you
+   don't. */
+#undef HAVE_DECL_BSWAP_16
+
+/* Define to 1 if you have the declaration of `bswap_32', and to 0 if you
+   don't. */
+#undef HAVE_DECL_BSWAP_32
+
+/* Define to 1 if you have the declaration of `bswap_64', and to 0 if you
+   don't. */
+#undef HAVE_DECL_BSWAP_64
+
+/* Define to 1 if you have the declaration of `htobe16', and to 0 if you
+   don't. */
+#undef HAVE_DECL_HTOBE16
 
 /* Define to 1 if you have the declaration of `htobe32', and to 0 if you
    don't. */
@@ -68,6 +97,10 @@
    don't. */
 #undef HAVE_DECL_HTOBE64
 
+/* Define to 1 if you have the declaration of `htole16', and to 0 if you
+   don't. */
+#undef HAVE_DECL_HTOLE16
+
 /* Define to 1 if you have the declaration of `htole32', and to 0 if you
    don't. */
 #undef HAVE_DECL_HTOLE32
@@ -75,6 +108,10 @@
 /* Define to 1 if you have the declaration of `htole64', and to 0 if you
    don't. */
 #undef HAVE_DECL_HTOLE64
+
+/* Define to 1 if you have the declaration of `le16toh', and to 0 if you
+   don't. */
+#undef HAVE_DECL_LE16TOH
 
 /* Define to 1 if you have the declaration of `le32toh', and to 0 if you
    don't. */
@@ -88,11 +125,24 @@
    don't. */
 #undef HAVE_DECL_STRERROR_R
 
+/* Define to 1 if you have the declaration of `strnlen', and to 0 if you
+   don't. */
+#undef HAVE_DECL_STRNLEN
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
 /* Define to 1 if you have the <endian.h> header file. */
 #undef HAVE_ENDIAN_H
+
+/* Define to 1 if the system has the `dllexport' function attribute */
+#undef HAVE_FUNC_ATTRIBUTE_DLLEXPORT
+
+/* Define to 1 if the system has the `dllimport' function attribute */
+#undef HAVE_FUNC_ATTRIBUTE_DLLIMPORT
+
+/* Define to 1 if the system has the `visibility' function attribute */
+#undef HAVE_FUNC_ATTRIBUTE_VISIBILITY
 
 /* Define this symbol if you have getaddrinfo_a */
 #undef HAVE_GETADDRINFO_A
@@ -124,6 +174,9 @@
 /* Define to 1 if you have the `iphlpapi' library (-liphlpapi). */
 #undef HAVE_LIBIPHLPAPI
 
+/* Define to 1 if you have the `jpeg ' library (-ljpeg ). */
+#undef HAVE_LIBJPEG_
+
 /* Define to 1 if you have the `kernel32' library (-lkernel32). */
 #undef HAVE_LIBKERNEL32
 
@@ -145,11 +198,17 @@
 /* Define to 1 if you have the `rpcrt4' library (-lrpcrt4). */
 #undef HAVE_LIBRPCRT4
 
+/* Define to 1 if you have the `rt' library (-lrt). */
+#undef HAVE_LIBRT
+
 /* Define to 1 if you have the `shell32' library (-lshell32). */
 #undef HAVE_LIBSHELL32
 
 /* Define to 1 if you have the `shlwapi' library (-lshlwapi). */
 #undef HAVE_LIBSHLWAPI
+
+/* Define to 1 if you have the `ssp' library (-lssp). */
+#undef HAVE_LIBSSP
 
 /* Define to 1 if you have the `user32' library (-luser32). */
 #undef HAVE_LIBUSER32
@@ -211,6 +270,9 @@
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
 
+/* Define to 1 if you have the <sys/endian.h> header file. */
+#undef HAVE_SYS_ENDIAN_H
+
 /* Define to 1 if you have the <sys/prctl.h> header file. */
 #undef HAVE_SYS_PRCTL_H
 
@@ -260,6 +322,15 @@
    your system. */
 #undef PTHREAD_CREATE_JOINABLE
 
+/* Define this symbol if the qt platform is cocoa */
+#undef QT_QPA_PLATFORM_COCOA
+
+/* Define this symbol if the qt platform is windows */
+#undef QT_QPA_PLATFORM_WINDOWS
+
+/* Define this symbol if the qt platform is xcb */
+#undef QT_QPA_PLATFORM_XCB
+
 /* Define this symbol if qt plugins are static */
 #undef QT_STATICPLUGIN
 
@@ -302,4 +373,4 @@
 /* Define for large files, on AIX-style hosts. */
 #undef _LARGE_FILES
 
-#endif //BITCOIN_CONFIG_H
+#endif //FRIENDSHIPCOIN_CONFIG_H
